--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Todo List</title>
   <link rel="stylesheet" href="css/style.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Joan&family=Noto+Sans+TC:wght@300&family=Oswald:wght@200&family=Playfair+Display:ital@1&family=Poppins:wght@300&family=Roboto:wght@100;300;500&display=swap"
+    rel="stylesheet">
 </head>
 
 <body>
